tests/fail/union_safety_types.tk
import std/io::println

pub type BoolAlias = bool
shape MyEnum ( A | B )
pub type StrictEnum = MyEnum


shape FailBool (
    // EXPECT: error[E0426]: restricted type 'bool'
    as b: bool
)

shape FailBoolAlias (
    // EXPECT: error[E0426]: restricted type 'BoolAlias'
    as b: BoolAlias
)

shape FailEnum (
    // EXPECT: error[E0426]: restricted type 'MyEnum'
    as e: MyEnum
)

shape FailEnumAlias (
    // EXPECT: error[E0426]: restricted type 'StrictEnum'
    as e: StrictEnum
)

fn main() -> i32 {
    return 0
}
